--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         </activity>
         <activity android:name=".GetStartedResto"
             android:screenOrientation="portrait"/>
+        <activity android:name=".TestSearch"/>
     </application>
 
 </manifest>
