--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "tech.fireflies.nkeksi"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.alpha1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -22,6 +22,8 @@ android {
 dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:26.+'
+    compile 'com.google.android.gms:play-services-maps:11.0.4'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -35,6 +37,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.0.4'
     compile 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.google.firebase:firebase-storage:11.0.4'
+    compile 'com.google.firebase:firebase-core:11.0.4'
     compile 'com.google.android.gms:play-services-auth:11.0.4'
     compile 'com.firebaseui:firebase-ui:0.6.1'
     compile 'com.synnapps:carouselview:0.1.4'
@@ -50,6 +53,10 @@ dependencies {
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
 
 
 
