--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "tech.fireflies.nkeksi"
+        applicationId "tech.firefly.nkeksi"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 2
-        versionName "1.alpha1"
+        versionCode 1
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
