--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
             android:name="tech.firefly.nkeksi.MapsActivity">
 
         </activity>
+        <activity android:name=".FoodItemActivity"/>
     </application>
 
 </manifest>
