--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ allprojects {
         maven{
             url "https://jitpack.io"
         }
+        maven {
+            url 'https://dl.bintray.com/wangyuwei/maven'
+        }
     }
 }
 
