--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,60 +9,56 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
+        android:name=".app.CacheApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="tech.firefly.nkeksi.GettingStartedUser"
-            android:screenOrientation="portrait" >
-
-
-        </activity>
+            android:name=".GettingStartedUser"
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="tech.firefly.nkeksi.Splash"
+            android:name=".Splash"
             android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name="tech.firefly.nkeksi.LoginUser" >
-
-        </activity>
-        <activity android:name="tech.firefly.nkeksi.RegisterUser" />
-        <activity android:name="tech.firefly.nkeksi.RegisterSecondUser" />
+        <activity android:name=".LoginUser"></activity>
+        <activity android:name=".RegisterUser"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".RegisterSecondUser"
+            android:launchMode="singleInstance"/>
         <activity
-            android:name="tech.firefly.nkeksi.Home"
-            android:screenOrientation="portrait" />
+            android:name=".Home"
+            android:screenOrientation="portrait"
+            android:launchMode="singleInstance"/>
         <activity
-            android:name="tech.firefly.nkeksi.UserProfile"
+            android:name=".UserProfile"
             android:screenOrientation="portrait" />
-        <activity android:name="tech.firefly.nkeksi.TestSearch" />
-        <activity android:name="tech.firefly.nkeksi.ForgotPasswordUser" />
-        <activity android:name="tech.firefly.nkeksi.RestoDashBoard" />
+        <activity android:name=".TestSearch" />
+        <activity android:name=".ForgotPasswordUser"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".RestoDashBoard" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key" />
 
-        <activity
-            android:name="tech.firefly.nkeksi.MapsActivity">
-
-        </activity>
-        <activity android:name=".FoodItemActivity"/>
+        <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".FoodItemActivity" />
+        <activity android:name=".CartDetail"></activity>
     </application>
 
 </manifest>
