--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity android:name=".MapsActivity"></activity>
         <activity android:name=".FoodItemActivity" />
         <activity android:name=".CartDetail"></activity>
+        <activity android:name=".EditProfile"/>
     </application>
 
 </manifest>
