--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,15 +22,15 @@ android {
 dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:support-v4:26.1.0'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.android.support:cardview-v7:26.+'
-    compile 'com.android.support:design:26.+'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.daimajia.easing:library:2.0@aar'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
@@ -55,19 +55,15 @@ dependencies {
     compile 'com.github.jd-alexander:LikeButton:0.2.1'
     //Slideing Button
     //compile 'com.ebanx:swipe-button:0.4.0'
-    compile 'com.ramotion.foldingcell:folding-cell:1.2.1'
-
-    compile 'com.github.florent37:materialtextfield:1.0.7'
-
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
     //Shopping View
     compile 'me.wangyuwei:shoppoing:1.0.5'
 
     compile 'com.jaredrummler:material-spinner:1.2.1'
 
+    compile 'cn.pedant.sweetalert:library:1.3'
+
     testCompile 'junit:junit:4.12'
 }
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
